welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var sequence = Array[int](num)
  sequence(0) = 1
  
	for (i <- 0 to num - 1){
    for(j <- 1 to sequence(i)){
      sequence(j) = i
    }
  }
  
  System.out.println(sequence(num - 1))
}